--- a/style.css
+++ b/style.css
@@ -3,4 +3,22 @@
     padding: 0;
     box-sizing:border-box;
 }
+body{
+    background-image:url('https://cdn.pixabay.com/photo/2015/08/25/14/16/small-wooden-house-906912__340.jpg');
+    background-size:cover;
+}
+div{
+    width: 400px;
+    height: 100px;
+    margin: 15% auto;
+    background-color: #f334;
+    text-align:center;
+    
+}
+span{
+font-size:50px;
+}
+p{
+    font:size
+}
 
