--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     background-image:url('https://cdn.pixabay.com/photo/2015/08/25/14/16/small-wooden-house-906912__340.jpg');
     background-size:cover;
+    height:100vh;
 }
 div{
     width: 400px;
@@ -19,6 +20,6 @@ span{
 font-size:50px;
 }
 p{
-    font:size
+    font-size:20px;
 }
 
